<resources>
    <string name="app_name">Assignment-6-CVBulder</string>
    <string name="forgotPassword"><u>Forgot Password?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="careerObjective"><b>Career Objective</b>\n\nMy career objective is to work in an organization where sincerity, talent and creativity gets the highest priority and with an urge to strive for a notion of constructive development.</string>
    <string name="careerNote"><b>Career Note:</b>\n\nCompleted on-campus studies and currently taking distance education courses to complete a Masters Degree in Computer Science (Available for full-time, W-2 employment).</string>
    <string name="aboutMe"><b>About Me:</b>\n\nEfficient Full Stack Developer with more than 15 years of professional IT experience including latest 10 years of experience leading development of complex projects to strengthen software solutions.</string>
    <string name="education">\n\n<b>Maharishi International University</b>\nMS in Computer Science</string>
    <string name="education2">\n\n<b>United International University</b>\nBsc in Computer Science and Eng.</string>
    <string name="certification1">\n\n<b>Microsoft Software Development Net</b>\nDotNet Core Certified Professional.</string>
    <string name="certification2">\n\n<b>Oracle Corporation</b>\nOracle Cloud Certified Associate.</string>
    <string name="work1">\n\n<b>Software Development Manager</b>\nVideoBank\nNew Jersey, USA\nSeptember 12, 2023 - Present</string>
    <string name="work2">\n\n<b>Lead Software Engineer</b>\nBiswas Software Tech\nDhaka, Bangladesh\nJanuary, 2012 - December 2020</string>
    <string name="work3">\n\n<b>Consultant (Hospital Domain)</b>\nBangladesh Internet Press\nDhaka, Bangladesh\nJanuary, 2009 - December 2010</string>
    <string name="work4">\n\n<b>Sr. Software Developer</b>\nSpeiil MACrosoft Ltd.\nDhaka, Bangladesh\nJune, 2005 - December 2008</string>
</resources>