<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="#FAF9F6">

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutMe"
                android:textSize="15dp"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="10dp"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="#FAF9F6">

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Education"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/miu"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/education"
                        android:textSize="15dp"

                        android:layout_gravity="center_vertical|end"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/uiu"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/education2"
                        android:textSize="15dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="#FAF9F6">

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Certification"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/dotnet"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/certification1"
                        android:textSize="15dp"

                        android:layout_gravity="center_vertical|end"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/oracle"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/certification2"
                        android:textSize="15dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>